k8s/apps/piggymetrics/base/network-policies/allow-services-to-config.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-to-config
  namespace: piggymetrics
  labels:
    app.kubernetes.io/part-of: piggymetrics
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: config-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: piggymetrics
      ports:
        - protocol: TCP
          port: 8888
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-to-registry
  namespace: piggymetrics
  labels:
    app.kubernetes.io/part-of: piggymetrics
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: registry
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: piggymetrics
      ports:
        - protocol: TCP
          port: 8761
