k8s/apps/piggymetrics/base/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: piggymetrics
  labels:
    app.kubernetes.io/part-of: piggymetrics
    app.kubernetes.io/component: network-policy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
